--- a/src/resources/postcss/tribe-common-admin/settings/_sidebar.pcss
+++ b/src/resources/postcss/tribe-common-admin/settings/_sidebar.pcss
@@ -11,20 +11,20 @@
 		align-items: flex-start;
 		align-self: stretch;
 		background-color: var(--tec-color-background);
-		border: 1px solid var(--tec-color-border-default);
-		border-radius: var(--tec-border-radius-default);
 		box-sizing: border-box;
 		display: none;
 		flex-direction: column;
 		gap: var(--tec-spacer-3);
+		max-width: var(--tec-width-sidebar);
 		min-height: 100vh;
 		padding-bottom: var(--tec-spacer-4);
 		width: 100%;
 
-		@media (min-width: 1260px) {
+		@media (--viewport-xlarge) {
+			border: 1px solid var(--tec-color-border-default);
+			border-radius: var(--tec-border-radius-default);
 			display: flex;
 			margin: var(--tec-spacer-4) var(--tec-spacer-7) auto 0;
-			max-width: var(--tec-width-sidebar);
 			min-height: fit-content;
 		}
 
